[feat] added few features

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>郭瑾瑶生日倒计时！</title>
     <link rel="stylesheet" href="style/main.css">
-    <script src="script/main.js"></script>
+    <script src="shared/shared.js" type="module"></script>
+    <script src="script/main.js" type="module"></script>
   </head>
   <body>
     <h1 id="main-title">还有</h1>
