--- a/on_birthday/index.html
+++ b/on_birthday/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>郭瑾瑶生日 生日快乐 (゜-゜)つロ 干杯~</title>
     <link rel="stylesheet" href="style/main.css">
-    <script src="script/main.js"></script>
+    <script src="script/main.js" type="module"></script>
   </head>
   <body>
     <div id="main-panel">
@@ -23,6 +23,20 @@
     <div id="tail">
       <div id="image">
         <div id="happy-birthday-background"></div>
+      </div>
+    </div>
+    <div id="main-content">
+      <div id="content-card-1" class="content-card">
+        <div class="c-title">世间因有你而美好</div>
+        <div class="c-content">你已经在这个世界上存在了<span class="live-days highlight"></span>天啦！庆祝🎉🎉🎉</div>
+      </div>
+      <div id="content-card-2" class="content-card">
+        <div class="c-title">希望你身体健康～</div>
+        <div class="c-content">你膝盖还好吗？晚上早点睡觉，不要经常熬夜，对身体不好。</div>
+      </div>
+      <div id="content-card-3" class="content-card">
+        <div class="c-title">送你个生日蛋糕～（emoji）</div>
+        <div class="c-content">🍰🍰🍰🕯️🕯️🕯️</div>
       </div>
     </div>
     <div id="name">
